--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; URL=/">
+    <meta http-equiv="refresh" content="0; URL=/COA_GUI_Tool_Project">
 </head>
 
 <body></body>
