Removing console.log()

--- a/myapp/public/404.html
+++ b/myapp/public/404.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; URL='./index.html'" />
+    <meta http-equiv="refresh" content="0; URL=/COA_GUI_Tool_Project">
 </head>
 
 <body></body>
